globus-xio-udt-driver (1.18-1+gt6.@distro@) @distro@; urgency=low

  * don't attempt ice negotiation over ipv6 while udt driver does not support ipv6

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 13:30:27 -0500

globus-xio-udt-driver (1.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix error checking and automake warning

 -- Globus Toolkit <support@globus.org>  Mon, 15 Jun 2015 21:31:33 -0400

globus-xio-udt-driver (1.16-2+gt6.@distro@) @distro@; urgency=low

  * Add support for debian squeeze and ubuntu lucid

 -- Globus Toolkit <support@globus.org>  Thu, 30 Oct 2014 11:11:41 -0400

globus-xio-udt-driver (1.15-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on libgupnp-igd-1.0-dev

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 13:08:31 -0400

globus-xio-udt-driver (1.15-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-xio-udt-driver (1.14-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-xio-udt-driver (1.14-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-xio-udt-driver (1.14-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:43 -0400

globus-xio-udt-driver (1.13-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Sat, 26 Apr 2014 07:53:42 -0400

globus-xio-udt-driver (1.12-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 22:48:13 -0400

globus-xio-udt-driver (1.11-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 22:22:40 -0400
