@@ -1,7 +1,7 @@
 Name:		globus-xio-udt-driver
 %global _name %(tr - _ <<< %{name})
-Version:	1.18
-Release:	2%{?dist}
+Version:	1.19
+Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus XIO UDT Driver
 
@@ -133,6 +133,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/pkgconfig/%{name}.pc
 
 %changelog
+* Mon Sep 21 2015 Globus Toolkit <support@globus.org> - 1.19-1
+- ignore other end's attempts at ipv6 negotiation
+
 * Thu Aug 06 2015 Globus Toolkit <support@globus.org> - 1.18-2
 - Add vendor
 
