@@ -1,3 +1,9 @@
+globus-xio-udt-driver (1.19-1+gt6.@distro@) @distro@; urgency=low
+
+  * ignore other end's attempts at ipv6 negotiation
+
+ -- Globus Toolkit <support@globus.org>  Mon, 21 Sep 2015 14:22:45 -0500
+
 globus-xio-udt-driver (1.18-1+gt6.@distro@) @distro@; urgency=low
 
   * don't attempt ice negotiation over ipv6 while udt driver does not support ipv6
